tests/success/simple_assigment.tig
let
    var output := "wrong output\n"
    var right := "output\n"
in
    output := right;
    print(output)
end
