tests/fail/invalid_escape_in_string_literal.tig
let
    var s := "This is an invalid escape: \j"
in
end
